Fixed dat-gui z-index

--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -96,7 +96,7 @@ body {
     position: absolute;
     top: 100px;
     right: 20px;
-    z-index: 100000;
+    z-index: 100001;
     float: right;
     width: 300px
 }
